# rerun-opencv-facedetection-python

./: .gitattributes  README.md  pyproject.toml
scripts/: run_odi.py  run_rerun.py
